Fix vspacing of ul elements
Fixes T4331

--- a/styles/pages/_mediawiki.scss
+++ b/styles/pages/_mediawiki.scss
@@ -140,6 +140,12 @@ body{
         width: auto;
     }
 
+    .mw-content-ltr {
+        ul {
+            margin-bottom: 1rem;
+        }
+    }
+
     #mw-content-text{
         //this is to fix float:left on SSection
         //this is actually our fault
